--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=7.2",
-		"codeigniter4/framework": "^4"
+		"codeigniter4/framework": "^4",
+		"codeigniter4/translations": "^4.0"
 	},
 	"require-dev": {
 		"mikey179/vfsstream": "1.6.*",
